<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/fragment_cadastro_logo"
        android:layout_width="272dp"
        android:layout_height="272dp"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="93dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logomarca_preta_sem_fundo" />

    <EditText
        android:id="@+id/fragment_cadastro_edtxt_nome"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_cadastro_logo" />

    <EditText
        android:id="@+id/fragment_cadastro_edtxt_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_cadastro_edtxt_nome"
        app:layout_constraintStart_toStartOf="@+id/fragment_cadastro_edtxt_nome"
        app:layout_constraintTop_toBottomOf="@+id/fragment_cadastro_edtxt_nome" />

    <EditText
        android:id="@+id/fragment_cadastro_edtxt_senha"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_cadastro_edtxt_email"
        app:layout_constraintStart_toStartOf="@+id/fragment_cadastro_edtxt_email"
        app:layout_constraintTop_toBottomOf="@+id/fragment_cadastro_edtxt_email" />

    <EditText
        android:id="@+id/fragment_cadastro_edtxt_confirma_senha"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/confirma_senha"
        android:inputType="textPassword"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_cadastro_edtxt_senha"
        app:layout_constraintStart_toStartOf="@+id/fragment_cadastro_edtxt_senha"
        app:layout_constraintTop_toBottomOf="@+id/fragment_cadastro_edtxt_senha" />

    <Button
        android:id="@+id/fragment_cadastro_btn_cadastrar"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_cadastrar"
        android:backgroundTint="#FFFF8100"
        android:bottomRightRadius="20dp"
        android:bottomLeftRadius="20dp"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_cadastro_txt_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fragment_cadastro_txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/rodape_cadastro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>